<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="io.mepos.meposwifiexample.MainActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtTitle"
        style="@style/MainStyle"
        android:paddingTop="15dp"
        android:text="@string/wifi_title" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:baselineAligned="false"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_config_wifi"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            card_view:cardPreventCornerOverlap="false">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/accessPointHeader"
                    style="@style/txtLabelscard2"
                    android:text="@string/apheader" />

                <EditText
                    android:id="@+id/txtSsidapmode"
                    style="@style/confirmationTexts"
                    android:hint="@string/networkssid" />

                <EditText
                    android:id="@+id/txtPasswordapmode"
                    style="@style/confirmationTexts"
                    android:hint="@string/passwordwifi" />

                <Button
                    android:id="@+id/buttomGoAP"
                    style="@style/BtnStyle"
                    android:text="@string/ap_button" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Space
            android:id="@+id/cardsSpace"
            android:layout_width="100dp"
            android:visibility="gone"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_confirm_wifi"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/cardColor"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            card_view:cardPreventCornerOverlap="false">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/netModeLabel"
                    style="@style/txtLabels"
                    android:text="@string/networkmode" />

                <TextView
                    android:id="@+id/netModeText"
                    style="@style/txtFields"
                    android:text="@string/networkmode" />

                <TextView
                    android:id="@+id/ssidLabel"
                    style="@style/txtLabels"
                    android:text="@string/networkssid" />

                <TextView
                    android:id="@+id/ssidText"
                    style="@style/txtFields"
                    android:text="@string/networkssid" />

                <TextView
                    android:id="@+id/ipAddressLabel"
                    style="@style/txtLabels"
                    android:text="@string/networkip" />

                <TextView
                    android:id="@+id/ipAddressText"
                    style="@style/txtFields"
                    android:text="@string/networkip" />

                <TextView
                    android:id="@+id/passwordlblwifi"
                    style="@style/txtLabels"
                    android:text="@string/passwordwifi" />

                <TextView
                    android:id="@+id/passwordWifiText"
                    style="@style/txtFields"
                    android:hint="@string/passwordwifi" />

                <Switch
                    android:id="@+id/wifiUSBSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switchUsbWifi"
                    android:visibility="invisible" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <Space
            android:id="@+id/cardsSpaceWc"
            android:layout_width="100dp"
            android:visibility="gone"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view__wifi_client"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/cardColorWifiClient"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            card_view:cardPreventCornerOverlap="false">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wifiClientHeader"
                    style="@style/txtLabelscard2"
                    android:text="@string/wcheader" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/labelSSIDwc"
                    style="@style/txtLabelscard2"
                    android:text="@string/networkssid"/>

                <EditText
                    android:id="@+id/txtPasswordWifiClient"
                    style="@style/confirmationTexts"
                    android:hint="@string/passwordwifi"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/lblencryptionwifi"
                    style="@style/txtLabelscard2"
                    android:text="@string/encryption"
                    android:textSize="15sp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerEncryptionClient"
                    android:entries="@array/encryptions"
                    />


                <Button
                    android:id="@+id/buttomGoWC"
                    style="@style/BtnStyle"
                    android:text="@string/ap_button" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnWifiDefault"
            style="@style/BtnStyle"
            android:text="@string/default_mode" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnWifiAP"
            style="@style/BtnStyle"
            android:text="@string/ap_mode" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnWifiEth"
            style="@style/BtnStyle"
            android:text="@string/eth_client_mode" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnWifiWC"
            style="@style/BtnStyle"
            android:text="@string/wifi_client_mode" />
    </LinearLayout>
</LinearLayout>


